Fix ad spacing

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -3840,6 +3840,13 @@ object {
   .widget {
     border-right: none;
   }
+
+  #cw_ad_widget-2 .left-image {
+    padding-right: 0;
+  }
+  #cw_ad_widget-2 .right-image {
+    padding-left: 0;
+  }
 }
 @media screen and (max-width: 900px) {
   #page #intro {
