--- a/assets/scss/components/_max-1152.scss
+++ b/assets/scss/components/_max-1152.scss
@@ -8,4 +8,16 @@
 		border-right : none;
 	}
 
+	#cw_ad_widget-2 {
+
+		.left-image {
+			padding-right : 0;
+		}
+
+		.right-image {
+			padding-left : 0;
+		}
+
+	}
+
 }
